Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,4 +31,4 @@ steps:
     azureSubscription: 'Visual Studio Enterprise – MPN(2ac1a31e-222f-47c4-ab4a-ae41aa42f516)'
     appType: 'webApp'
     WebAppName: 'cazteedev'
-    packageForLinux: '$(System.ArtifactsDirectory)/**/*.zip'
+    package: '$(System.ArtifactsDirectory)/**/*.zip'
